--- a/cell01/ex01/piscineweb.html
+++ b/cell01/ex01/piscineweb.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Piscineweb</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1 style="text-align: center;">Piscine Web</h1>
+    <h1><center>Piscine Web</center></h1>
 </body>
 </html>
