--- a/cell01/ex04/basics.html
+++ b/cell01/ex04/basics.html
@@ -27,6 +27,8 @@
         .footer {
             text-align: right;
             margin-top: 20px;
+            font-style: italic;
+            font-family: monospace;
         }
         .line {
             border: none;
