--- a/rush/yjullapo.html
+++ b/rush/yjullapo.html
@@ -35,13 +35,21 @@
     </section>
 
     <section id="skill">
-        <div class="container-show">
             
-        </div>
     </section>
 
     <section id="contact">
-        
+        <div class="contactinfo">
+            <div class="reach"></div>
+                <h3>REACH US</h3>
+                <p>IoT Engineering, KMITL</p>
+            </div>
+            <div class="email">
+                <h3>EMAIL</h3>
+                <p>65010237@kmitl.ac.th</p>
+            </div>
+        </div>
+        </div>
     </section>
 
 </body>
